--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=locations
 
 spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
+
+spring.mvc.problemdetails.enabled=true
