--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,14 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 
+
+
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>problem-spring-web-starter</artifactId>
+			<version>0.29.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
