--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.devtools.restart.poll-interval=2s
 spring.devtools.restart.quiet-period=1s
 
 spring.mvc.problemdetails.enabled=true
+
+locations.touppercase=true
