--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,9 @@ spring.devtools.restart.quiet-period=1s
 spring.mvc.problemdetails.enabled=true
 
 locations.touppercase=true
+
+spring.datasource.url=jdbc:mariadb://localhost/locations
+spring.datasource.username=locations
+spring.datasource.password=locations
+
+spring.jpa.hibernate.ddl-auto=create
