--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,12 +5,12 @@ spring.devtools.restart.quiet-period=1s
 
 spring.mvc.problemdetails.enabled=true
 
-locations.touppercase=true
+locations.touppercase=false
 
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mariadb://localhost/locations
+spring.datasource.url=jdbc:mariadb://localhost:3307/locations
 spring.datasource.username=locations
 spring.datasource.password=locations
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
