--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.url=jdbc:mariadb://localhost:3307/locations
 spring.datasource.username=locations
 spring.datasource.password=locations
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
