--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ spring.datasource.username=locations
 spring.datasource.password=locations
 
 spring.jpa.hibernate.ddl-auto=none
+
+
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+management.endpoint.shutdown.enabled=true
+
+
+management.info.env.enabled=true
+info.appname=Locations
